--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	    <li><a style="color:#232C2D; background:#FFFFFF" href="index.html">Home</a></li>
 	    <li><a href="research.html">Research</a></li>
 	    <li><a href="pub.html">Publications</a></li>
-	    <li><a href="students.html">Students</a></li>
+	    <li><a href="students.html">People</a></li>
 	    <li><a href="teaching.html">Teaching</a></li>
 	    <li><a href="news.html">News</a></li>
 	</ul>
@@ -45,18 +45,20 @@
         	 a courtesy appointment in the department of <a href="http://www.cs.virginia.edu/">Computer Science</a> at
         	 the <a href="http://virginia.edu">University of Virginia</a>. I am also affiliated with the <a href="http://linklab.virginia.edu">LinkLab</a>, a multi-disciplinary research center for Cyber-Physical Systems (CPS).<br>
         	 
-        	 <br> I am a recipient of the NSF CAREER Award in 2022 and the William C. Carter Ph.D. Dissertation Award in Dependability in 2017.
+             <br>  My research interests are at the intersection of <b>computer systems dependability</b> and <b>data science</b>. <br>
+             I am particularly interested in data-driven resilience assessment and design of <b>embedded and cyber-physical systems</b>,       
+             with a focus on safety and security validation and monitoring in medical devices and systems, surgical robots, and autonomous systems. 
+             <br><br>  
+             
+        	 I am a recipient of the <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2146295&HistoricalAwards=false">NSF CAREER Award</a> in 2022 and the <a href="https://ieeexplore.ieee.org/document/8023104"> William C. Carter Ph.D. Dissertation Award in Dependability</a> in 2017.
         	 Before joining UVA, I was a research staff member at the <a href="https://researcher.watson.ibm.com/researcher/view_group.php?id=7664"> IBM T. J. Watson Research Center</a>.
              I received my Ph.D. in <a href="http://www.ece.illinois.edu/">Electrical and Computer Engineering</a> from the 
-             <a href="http://www.illinois.edu/">University of Illinois</a> Urbana-Champaign, where I worked in the <a href="http://depend.csl.illinois.edu/">DEPEND</a> group
+             <a href="http://www.illinois.edu/">University of Illinois</a>, where I worked in the <a href="http://depend.csl.illinois.edu/">DEPEND</a> group
              within the <a href="http://csl.illinois.edu/">Coordinated Science Laboratory</a>. 
              I obtained my B.Sc. and M.Sc. in Computer Engineering from the <a href="http://ece.ut.ac.ir/en/ece">University of Tehran</a>.
              <br>
              <br>
-             My research interests are at the intersection of <b>computer systems dependability</b> and <b>data science</b>. <br>
-             I am particularly interested in data-driven resilience assessment and design of <b>embedded and cyber-physical systems</b>,       
-             with a focus on safety and security validation and monitoring in medical devices and systems, surgical robots, and autonomous systems. 
-             <br><br>  
+
         </td>
         </tr>
         </table>
@@ -65,15 +67,15 @@
 		<h1>Recent News</h1>
 	</div>
 	<div id="rightColumn2">
-		<a href="https://www.dependability.org/wg10.4/ivds2021/">The First IFIP workshop on Intelligent Vehicle Dependability and Security (IVDS)</a>. All the talks available <a href="https://www.dependability.org/wg10.4/ivds2021/program.html">here</a>.
+		Co-organizing <a href="https://ivds.dependability.org"> The Second IFIP workshop on Intelligent Vehicle Dependability and Security (IVDS)</a>.
 		<br><br>
 		
-		New papers on <a href="https://arxiv.org/pdf/2010.04785.pdf">Autonomous Endoscopic Camera Control</a> and 
-		<a href="https://arxiv.org/pdf/2005.03611.pdf"> Context Aware Safety Monitoring</a> in Robotic Surgery. 
+		New papers on <a href="https://arxiv.org/pdf/2010.04785.pdf">Analysis of Executional and Procedural Errors</a> and 
+		<a href="https://arxiv.org/pdf/2005.03611.pdf"> Real-time Safety Monitoring</a> in Robot-Assisted Surgery. 
 		<br><br>
 		
-		A <b>postdoctoral research position</b> available in the Link Lab in the area of Medical Cyber-Physical Systems. 
-		Apply <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Research-Associate-in-Electrical-and-Computer-Engineering-and-Computer-Science_R0009889">here</a>. 
+		A <b>postdoctoral research position</b> available in the area of AI Cognitive Assistants for Emergency Response. 
+		Apply <a href="https://uva.wd1.myworkdayjobs.com/en-US/UVAJobs/job/Charlottesville-VA/Research-Associate-in-Electrical-and-Computer-Engineering_R0034422">here</a>. 
 		<br><br>
 		
 		<!--I am serving on the program committee of <a href="http://www.dsn.org">DSN 2019</a> and the organizing committee of <a href="https://sites.google.com/view/wosocer/">WoSoCer 2018</a> and <a href="http://iccps.acm.org/2019/">ICCPS 2019</a>. Looking forward to your submissions!
