--- a/students.html
+++ b/students.html
@@ -13,8 +13,8 @@
 	<ul id="nav">
 	    <li><a href="index.html">Home</a></li>
 	    <li><a href="research.html">Research</a></li>
-	    <li><a href="pub.html">Publications</a></li>
-	    <li><a style="color:#232C2D; background:#FFFFFF" href="students.html">Students</a></li>
+	    <li><a href="pub.html">People</a></li>
+	    <li><a style="color:#232C2D; background:#FFFFFF" href="students.html">People</a></li>
 		<li><a href="teaching.html">Teaching</a></li>
 	    <li><a href="news.html">News</a></li>
 	</ul>
@@ -25,15 +25,29 @@
 		<td>
 		<table border="0" cellspacing="0" cellpadding="5">
 		<tbody>
+
+		<tr valign="top">
+			<td colspan=2><b><font size="3" color=#000000>Postdoctoral Researchers</font></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td><ul>
+			<li>Maryam Bagheri Khorasgani</li>
+			</ul>
+			<br>
+			</td>
+		</tr>
+		
 		<tr valign="top">
 			<td colspan=2><b><font size="3" color=#000000>Ph.D. Students</font></td>
 		</tr>
 		<tr>
 			<td></td>
 			<td><ul>
+			<li>Xueren Ge</li>
 			<li>Kay Hutchinson</li>
-			<li>Zongyu (Zoey) Li</li>
-			<li>Xugui Zhou</li>	
+			<li><a href="https://zoey-zongyu-li.netlify.app" >Zongyu (Zoey) Li</a></li>
+			<li><a href="https://xugui.netlify.app">Xugui Zhou</a></li>	
 			</ul>
 			<br>
 			</td>
@@ -75,10 +89,10 @@
 			<td>
 			<ul>
 			<li>Mustafa Hotaki, M.Sc., 2020 =>&ensp;Counterpoint Consulting&ensp;</li>
-			<li>Mohammad Samin Yasar&ensp;</li>
+			<li>Mohammad Samin Yasar&ensp; => PhD @ UVA&ensp;</li>
 			<li>Bulbul Ahmed, M.Sc., 2019&ensp;=>&ensp;PhD @ UFlorida&ensp;</li>
-			<li>Yongming Qin&ensp;</li>
-			<li>Sile Shu, M.Sc., 2019&ensp;=>&ensp;Software Engineer @ Amazon&ensp;</li>
+			<li>Yongming Qin&ensp; => PhD @ UVA&ensp;</li>
+			<li>Sile Shu, M.Sc., 2019&ensp;=>&ensp;Amazon&ensp;</li>
 			</ul>
 			<br>
 			</td>
