--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 		Co-organizing <a href="https://ivds.dependability.org"> The Second IFIP workshop on Intelligent Vehicle Dependability and Security (IVDS)</a>.
 		<br><br>
 		
-		New papers on <a href="https://arxiv.org/pdf/2010.04785.pdf">Analysis of Executional and Procedural Errors</a> and 
-		<a href="https://arxiv.org/pdf/2005.03611.pdf"> Real-time Safety Monitoring</a> in Robot-Assisted Surgery. 
+		New papers on <a href="https://onlinelibrary.wiley.com/doi/epdf/10.1002/rcs.2375">Analysis of Executional and Procedural Errors</a> and 
+		<a href="https://homa-alem.github.io/papers/ICRA_2022.pdf"> Real-time Safety Monitoring</a> in Robot-Assisted Surgery. 
 		<br><br>
 		
 		A <b>postdoctoral research position</b> available in the area of AI Cognitive Assistants for Emergency Response. 
