--- a/students.html
+++ b/students.html
@@ -13,7 +13,7 @@
 	<ul id="nav">
 	    <li><a href="index.html">Home</a></li>
 	    <li><a href="research.html">Research</a></li>
-	    <li><a href="pub.html">People</a></li>
+	    <li><a href="pub.html">Publications</a></li>
 	    <li><a style="color:#232C2D; background:#FFFFFF" href="students.html">People</a></li>
 		<li><a href="teaching.html">Teaching</a></li>
 	    <li><a href="news.html">News</a></li>
