--- a/students.html
+++ b/students.html
@@ -47,6 +47,7 @@
 			<li>Xueren Ge</li>
 			<li>Kay Hutchinson</li>
 			<li><a href="https://zoey-zongyu-li.netlify.app" >Zongyu (Zoey) Li</a></li>
+			<li>Keshara Weerasinghe</li>
 			<li><a href="https://xugui.netlify.app">Xugui Zhou</a></li>	
 			</ul>
 			<br>
@@ -73,7 +74,6 @@
 			<li>Saahith Janapati</li>
 			<li>Maxfield Kouzel</i>
 			<li>Haotian Ren</li>
-			<li>Ian Reyes</li>
 			</ul>
 			</td>
 		</tr>
@@ -106,6 +106,7 @@
 			<td></td>
 			<td>
 			<ul>
+			<li>Ian Reyes=>&ensp;IBM&ensp;</li>
 			<li>Sneha Iyer</i>
 			<li>Aishwarya Gavili</i>
 			<li>Sharon Lu</i>	
