--- a/pub.html
+++ b/pub.html
@@ -25,6 +25,22 @@
 
 		    <tr valign="top">
 			<td>
+			<a href="./papers/CHASE_2022.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
+			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
+			   -->
+			</td>
+			<td>
+			<p align="left">
+			<b><font color=#000000>“Design and Validation of an Open-Source Closed-Loop Testbed for Artificial Pancreas Systems” </font></b></b><br>
+			X. Zhou, H. Ren, M. Kouzel, <u>H. Alemzadeh</u><br>
+			To appear in the <i>IEEE/ACM Conf. on Connected Health: Applications, Systems and Engineering Technologies (CHASE)</i>, 2022. <b> <b> (Acceptance rate ~ 42.3%)</b> <br>   	
+			</p>
+			</td>
+		    </tr>
+		    
+		    
+		    <tr valign="top">
+			<td>
 			<a href="https://arxiv.org/pdf/2204.09183.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
 			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
 			   -->
@@ -32,7 +48,7 @@
 			<td>
 			<p align="left">
 			<b><font color=#000000>“Robustness Testing of Data and Knowledge Driven Anomaly Detection in Cyber-Physical Systems” </font></b></b><br>
-			Xugui Zhou, Maxfield Kouzel, <u>H. Alemzadeh</u><br>
+			X. Zhou, M. Kouzel, <u>H. Alemzadeh</u><br>
 			In the <i>5th IEEE/IFIP DSN Workshop on Dependable and Secure Machine Learning (DSN-DSML)</i>, 2022. <b> <br>   	
 			</p>
 			</td>
