--- a/students.html
+++ b/students.html
@@ -32,7 +32,7 @@
 		<tr>
 			<td></td>
 			<td><ul>
-			<li>Maryam Bagheri Khorasgani</li>
+			<li>Maryam Bagheri Khorasgani (Co-advised with Lu Feng)</li>
 			</ul>
 			<br>
 			</td>
@@ -47,6 +47,7 @@
 			<li>Xueren Ge</li>
 			<li>Kay Hutchinson</li>
 			<li><a href="https://zoey-zongyu-li.netlify.app" >Zongyu (Zoey) Li</a></li>
+			<li>Hamid Roodabeh</li>
 			<li>Keshara Weerasinghe</li>
 			<li><a href="https://xugui.netlify.app">Xugui Zhou</a></li>	
 			</ul>
@@ -71,9 +72,14 @@
 		<tr valign="top">
 		    <td></td>
 			<td><ul> 
+			<li>Shruti Bala</i>
+			<li>Sneha Iyer</i>
 			<li>Saahith Janapati</li>
 			<li>Maxfield Kouzel</i>
+			<li>Joyce Park</i>
 			<li>Haotian Ren</li>
+			<li>Kathleen Yao</i>
+			<li>Shrisha Yapalparvi</li>
 			</ul>
 			</td>
 		</tr>
@@ -106,8 +112,7 @@
 			<td></td>
 			<td>
 			<ul>
-			<li>Ian Reyes=>&ensp;IBM&ensp;</li>
-			<li>Sneha Iyer</i>
+			<li>Ian Reyes&ensp;=>&ensp;IBM&ensp;</li>
 			<li>Aishwarya Gavili</i>
 			<li>Sharon Lu</i>	
 			<li>Rohan Chandra</li>
