--- a/news.html
+++ b/news.html
@@ -24,6 +24,33 @@
 		<tbody>									
 			<tr valign="top"><td colspan="2"></td></tr>
 			<tr valign="top">
+			<td>09/2022</td>
+			<td width="5"></td>
+			<td>
+			Our work on design and evaluation of an <a href="https://arxiv.org/pdf/2208.06479.pdf" target="_blank">"Open-Source Closed-Loop Testbed for Artificial Pancreas Systems"</a> was featured by the <a href="https://diabetes-connections.com/i-think-its-just-the-beginning-a-new-way-to-test-diy-pump-systems-from-uva/" target="_blank">Diabetes Connections with Stacey Simms</a>.
+			</td>	
+			</tr>
+			
+			<tr valign="top"><td colspan="2"></td></tr>
+			<tr valign="top">
+			<td>08/2022</td>
+			<td width="5"></td>
+			<td>
+			We hosted the <a href="https://www.tech-girls.org/bio-med.html" target="_blank">2022 BIO-MED TECH-GIRLS</a> with demos and hands-on activities on robotics in medicine.
+			</td>	
+			</tr>
+			
+			<tr valign="top"><td colspan="2"></td></tr>
+			<tr valign="top">
+			<td>06/2022</td>
+			<td width="5"></td>
+			<td>
+			I co-organized the <a href="https://ivds.dependability.org/ivds2022/index.html" target="_blank">Second IFIP workshop on Intelligent Vehicle Dependability and Security (IVDS)</a> in conjunction with the Summer Meeting of the IFIP Working Group 10.4 on Dependable Computing and Fault Tolerance. All the talks are available <a href="https://ivds.dependability.org/ivds2022/program.html" target="_blank">here</a>.
+			</td>	
+			</tr>
+
+			<tr valign="top"><td colspan="2"></td></tr>
+			<tr valign="top">
 			<td>01/2022</td>
 			<td width="5"></td>
 			<td>
