--- a/pub.html
+++ b/pub.html
@@ -25,7 +25,7 @@
 
 		    <tr valign="top">
 			<td>
-			<a href="./papers/CHASE_2022.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
+			<a href="https://arxiv.org/pdf/2208.06479.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
 			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
 			   -->
 			</td>
