--- a/research.html
+++ b/research.html
@@ -30,14 +30,14 @@
 			Our research focuses on design and validation of Resilient Cyber-Physical Systems (CPS) with applications to medical devices, surgical robots, and autonomous systems. 
 			We take a multidisciplinary approach to safety and security assurance in CPS by leveraging techniques from dependable computing and fault-tolerance, machine learning, and real-time embedded systems. 
 			We develop data-driven methods, realistic testbeds, and simulation platforms for analysis of safety and security incidents, system resilience assessment against accidental and malicious faults, and runtime monitoring for detection and mitigation of adverse events.
-			<br><br>
-			<b>We are looking for highly motivated students with interests and expertise in computer systems dependability and security, robotics, and data science to join our team.</b><br>
+			<br>
+			<h4 style="border:black; border-width:1px; border-style:solid; padding:5px; color:black;background:#F9EEEC;"> We have Ph.D. positions available for Fall 2023. I am looking for highly motivated students with experience in computer systems dependability & security, robotics, and machine learning to join our team. <br> 
+			If you are interested, send me an email along with your most recent CV and transcript.</h4>
 			</td>
 			</tr>
 						
 			<tr valign="top">
 			<td>
-			<br>
 			More information about our current projects may be found below:<br><br>
 			<b><a href="#robotic_surgery">&#9679;&nbsp;&nbsp;Resilient Cyber-Physical Systems for Robotic Surgery</a></font></b><br>
 			<b><a href="#cognitive_EMS">&#9679;&nbsp;&nbsp;Cognitive Assistant Systems for Emergency Response</a></font></b><br>
