--- a/pub.html
+++ b/pub.html
@@ -25,6 +25,22 @@
 
 		    <tr valign="top">
 			<td>
+			<a href="https://arxiv.org/pdf/2211.15413"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
+			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
+			   -->
+			</td>
+			<td>
+			<p align="left">
+			<b><font color=#000000>“Towards Developing Safety Assurance Cases for Learning-Enabled Medical Cyber-Physical Systems” </font></b></b><br>
+			M. Bagheri, J. Lamp, X. Zhou, L. Feng, <u>H. Alemzadeh</u><br>
+			To appear in the <i>AAAI Workshop on Artificial Intelligence Safety (SafeAI)</i>, 2023. <b> <br>   	
+			</p>
+			</td>
+		    </tr>
+		    
+		    
+		    <tr valign="top">
+			<td>
 			<a href="https://arxiv.org/pdf/2208.06479.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
 			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
 			   -->
