--- a/teaching/ece_6501/schedule.html
+++ b/teaching/ece_6501/schedule.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>ECE 4501/6501, CS 6501 - Fall 2021</title>
+<title>ECE 4501/6501, CS 6501 - Spring 2023</title>
 <link rel="stylesheet" type="text/css" href="style.css" />
 <link rel="icon" type="image/ico" href="images/favico.ico">
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
@@ -21,14 +21,14 @@
 	<tr>
 	<td>
 	<p align="left" style="font-size:22px">
-	   <b><br> ECE 4501/6501, CS 6501 - Fall 2021 Schedule<br></b>
+	   <b><br> ECE 4501/6501, CS 6501 - Spring 2023 Schedule<br></b>
 	</p>
     <p align="left" style="font-size:16px">
     The following schedule lists the tentative activities for each week and throughout the semester. 
     This schedule is <b><u>subject to change</b></u>. You will be informed of any updates or changes here and on the Collab website and at the beginning of each class. <br></p>
     <p align="right" style="font-size:14px"><b>(Reading: &ensp; V = Valvano, L&S = Lee and Seshia, PK = Koopman, KN = Knight)</b><br></p>
     <p>
-    <iframe width = "100%" height = 950px src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQG8AwrU_8tOhy2M_ojc3rx2XOFa3sllzxZcZTly4Qt_uBFI4TnVMJIuDmFP_CZ1DIV2fXZq-O-Nw7F/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+    <iframe width = "100%" height = 1020px src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ32hjHXCxaXLZ3U0fstfBgB99X5zu7_DdhrjzcjwGmeIfUBkezUlT4Nwdlrt00dN7wY9rstQk19FmL/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 	</p>
 	</td>
 	</tr>
