--- a/teaching/ece_6501/index.html
+++ b/teaching/ece_6501/index.html
@@ -105,7 +105,7 @@
 	<div id="rightbottomColumn">
 	<strong>Time: </strong>Mon/Wed 2:00 - 3:15 PM<br>
 	<strong>Location: </strong>Rice Hall 340 
-	<br>+ Online Zoom Session via UVA Collab<br><br>
+	<!-- <br>+ Online Zoom Session via UVA Collab--><br><br>
 	<strong>Lab Location: </strong>Rice 240 (Open 24/7)<br><br>
     <strong>Instructor: </strong><br>
     Homa Alemzadeh, ha4d@virginia.edu<br>
