Add office hours and recent paper

--- a/pub.html
+++ b/pub.html
@@ -25,6 +25,21 @@
 
 		    <tr valign="top">
 			<td>
+			<!--<a href="https://arxiv.org/pdf/2211.15413"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
+			<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
+			   -->
+			</td>
+			<td>
+			<p align="left">
+			<b><font color=#000000>“Towards Surgical Context Inference and Translation to Gestures” </font></b></b><br>
+			K. Hutchinson, Z. Li, I. Reyes, <u>H. Alemzadeh</u><br>
+			To appear in the <i>IEEE International Conference on Robotics and Automation (ICRA)</i>, 2023. <b> (Acceptance rate ~ 43.1%) </b> <br>   	
+			</p>
+			</td>
+		    </tr>
+		    
+		    <tr valign="top">
+			<td>
 			<a href="https://arxiv.org/pdf/2211.15413"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
 			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
 			   -->
