--- a/teaching/ece_6501/index.html
+++ b/teaching/ece_6501/index.html
@@ -112,7 +112,7 @@
     Office: 259 Olsson Hall (Link Lab)<br>
     <br>
     <b>Instructor Office Hours:</b> <br>
-    TBD&ensp;TBD<br> 
+    Mondays&ensp;3:15-4:15 PM<br> 
     In person in Olsson 259 and via Zoom<br>
     Other times by appointment<br>
     <br>
@@ -127,11 +127,11 @@
     In person in Rice 240 and via Zoom<br>
     <table border="0" cellpadding="0" cellspacing="0">
 	<tbody>
-	<tr><td>Mondays&ensp;</td><td>TBD&ensp;</td><tr>
-	<tr><td>Tuesdays&ensp;</td><td>TBD&ensp;</td><tr>
-	<tr><td>Wednesdays&ensp;</td><td>TBD&ensp;</td><tr>
-	<tr><td>Thursdays&ensp;</td><td>TBD&ensp;</td><tr>
-	<tr><td>Fridays&ensp;</td><td>TBD&ensp;</td><tr>
+	<tr><td>Mondays&ensp;</td><td>4-5 PM&ensp;</td><tr>
+	<tr><td>Tuesdays&ensp;</td><td>3-4 PM&ensp;</td><tr>
+	<tr><td>Wednesdays&ensp;</td><td>4-5 PM&ensp;</td><tr>
+	<tr><td>Thursdays&ensp;</td><td>4-5 PM&ensp;</td><tr>
+	<tr><td>Fridays&ensp;</td><td>11-12 AM&ensp;</td><tr>
 	
 	</tbody>
 	</table>
