--- a/pub.html
+++ b/pub.html
@@ -25,6 +25,22 @@
 
 		    <tr valign="top">
 			<td>
+			<a href="https://virginia.app.box.com/s/2d5hy0aw4robf0tl1hktup6qe1y6gph6"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
+			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
+			   -->
+			</td>
+			<td>
+			<p align="left">
+			<b><font color=#000000>“Hybrid Knowledge and Data Driven Synthesis of Runtime Monitors for Cyber-Physical Systems” </font></b></b><br>
+			X. Zhou, B. Ahmed, J. Aylor, P. Asare, <u>H. Alemzadeh</u><br>
+			To appear in the <i>IEEE Transactions on Dependable and Secure Computing (TDSC)</i>, 2023. <b> (Impact Factor ~ 6.8) </b> <br>   	
+			</p>
+			</td>
+		    </tr>
+		    
+		    
+		    <tr valign="top">
+			<td>
 			<!--<a href="https://arxiv.org/pdf/2211.15413"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
 			<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
 			   -->
