--- a/pub.html
+++ b/pub.html
@@ -23,10 +23,26 @@
 		<table border="0" cellpadding="5" cellspacing="0">
 		<tbody>
 
+
 		    <tr valign="top">
 			<td>
-			<!--<a href="https://virginia.app.box.com/s/2d5hy0aw4robf0tl1hktup6qe1y6gph6"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
+			<!--<a href="https://arxiv.org/pdf/2303.09913.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
 			<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
+			   -->
+			</td>
+			<td>
+			<p align="left">
+			<b><font color=#000000>“COMPASS: A Formal Framework and Aggregate Dataset for Generalized Surgical Procedure Modeling” </font></b></b><br>
+			K. Hutchinson, I. Reyes, Z. Li, <u>H. Alemzadeh</u><br>
+			To appear in the <i>International Journal of Computer Assisted Radiology and Surgery (IJCARS)</i>, 2023. <br>   	
+			</p>
+			</td>
+		    </tr>
+
+		    <tr valign="top">
+			<td>
+			<a href="https://arxiv.org/pdf/2303.09913.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
+			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
 			   -->
 			</td>
 			<td>
