--- a/pub.html
+++ b/pub.html
@@ -34,7 +34,7 @@
 			<p align="left">
 			<b><font color=#000000>“COMPASS: A Formal Framework and Aggregate Dataset for Generalized Surgical Procedure Modeling” </font></b></b><br>
 			K. Hutchinson, I. Reyes, Z. Li, <u>H. Alemzadeh</u><br>
-			To appear in the <i>International Journal of Computer Assisted Radiology and Surgery (IJCARS)</i>, 2023. <br>   	
+			To appear in the <i>International Journal of Computer Assisted Radiology and Surgery (IJCARS)</i>, 2023. <b>(Impact Factor ~ 3.4)</b> <br>   	
 			</p>
 			</td>
 		    </tr>
@@ -49,7 +49,7 @@
 			<p align="left">
 			<b><font color=#000000>“Short: Basal-Adjust: Trend Prediction Alerts and Adjusted Basal Rates for Hyperglycemia Prevention” </font></b></b><br>
 			C. Smith, M. Kouzel, X. Zhou, <u>H. Alemzadeh</u><br>
-			To appear in the <i>IEEE/ACM Conf. on Connected Health: Applications, Systems and Engineering Technologies (CHASE)</i>, 2023. <br>   	
+			To appear in the <i>IEEE/ACM Conf. on Connected Health: Applications, Systems and Engineering Technologies (CHASE)</i>, 2023. <b> (Acceptance rate ~ 35%) </b> <br>   	
 			</p>
 			</td>
 		    </tr>
@@ -173,7 +173,7 @@
 			<p align="left">
 			<b><font color=#000000>“Analysis of Executional and Procedural Errors in Dry-lab Robotic Surgery Experiments” </font></b></b><br>
 			K. Hutchinson, Zongyu Li, Leigh A. Cantrell, Noah S. Schenkman, <u>H. Alemzadeh</u><br>
-			In the <i>International Journal of Medical Robotics and Computer Assisted Surgery (IJMRACS)</i>, 2022.<br>   	
+			In the <i>International Journal of Medical Robotics and Computer Assisted Surgery (IJMRACS)</i>, 2022. <b>(Impact Factor ~ 2.48) </b><br>   	
 			</p>
 			</td>
 		    </tr>
@@ -218,7 +218,7 @@
 			<p align="left">
 			<b><font color=#000000>“On Parallel Real-Time Security Improvement Using Mixed-Integer Programming” </font></b></b><br>
 			H. MJ Almohri, L. T Watson, <u>H. Alemzadeh</u>, M. Almutawa<br>
-			In the <i>IEEE Access</i>, vol. 9, 2021.<br>   	
+			In the <i>IEEE Access</i>, vol. 9, 2021. <b>(Impact Factor ~ 3.37) </b><br>   	
 			</p>
 			</td>
 		    </tr>
@@ -233,7 +233,7 @@
 			<p align="left">
 			<b><font color=#000000>“A Review of Cognitive Assistants for Healthcare: Trends, Prospects, and Future Directions” </font></b></b><br>
 			S. Preum, S. Munir, M. Ma, M. S. Yasar, D. J. Stone, R. Williams, <u>H. Alemzadeh</u>, J. Stankovic<br>
-			In the <i>ACM Computing Surveys</i>, 2021.<br>   	
+			In the <i>ACM Computing Surveys</i>, 2021. <b>(Impact Factor ~ 14.3) </b> <br>   	
 			</p>
 			</td>
 		    </tr>
