--- a/pub.html
+++ b/pub.html
@@ -96,7 +96,7 @@
 			<p align="left">
 			<b><font color=#000000>“Towards Developing Safety Assurance Cases for Learning-Enabled Medical Cyber-Physical Systems” </font></b></b><br>
 			M. Bagheri, J. Lamp, X. Zhou, L. Feng, <u>H. Alemzadeh</u><br>
-			To appear in the <i>AAAI Workshop on Artificial Intelligence Safety (SafeAI)</i>, 2023. <b> <br>   	
+			In the <i>AAAI Workshop on Artificial Intelligence Safety (SafeAI)</i>, 2023. <b> <br>   	
 			</p>
 			</td>
 		    </tr>
@@ -112,7 +112,7 @@
 			<p align="left">
 			<b><font color=#000000>“Design and Validation of an Open-Source Closed-Loop Testbed for Artificial Pancreas Systems” </font></b></b><br>
 			X. Zhou, H. Ren, M. Kouzel, <u>H. Alemzadeh</u><br>
-			To appear in the <i>IEEE/ACM Conf. on Connected Health: Applications, Systems and Engineering Technologies (CHASE)</i>, 2022. <b> <b> (Acceptance rate ~ 43.5%)</b> <br>   	
+			In the <i>IEEE/ACM Conf. on Connected Health: Applications, Systems and Engineering Technologies (CHASE)</i>, 2022. <b> <b> (Acceptance rate ~ 43.5%)</b> <br>   	
 			</p>
 			</td>
 		    </tr>
