--- a/students.html
+++ b/students.html
@@ -45,11 +45,11 @@
 			<td></td>
 			<td><ul>
 			<li>Xueren Ge</li>
-			<li>Kay Hutchinson</li>
+			<li><a href="https://kch4fk.github.io" >Kay Hutchinson</li>
 			<li><a href="https://zoey-zongyu-li.netlify.app" >Zongyu (Zoey) Li</a></li>
 			<li>Hamid Roodabeh</li>
 			<li>Keshara Weerasinghe</li>
-			<li><a href="https://xugui.netlify.app">Xugui Zhou</a></li>	
+			<li><a href="https://xugui-zhou.github.io/">Xugui Zhou</a></li>	
 			</ul>
 			<br>
 			</td>
