--- a/students.html
+++ b/students.html
@@ -46,7 +46,7 @@
 			<td><ul>
 			<li>Xueren Ge</li>
 			<li><a href="https://kch4fk.github.io" >Kay Hutchinson</li>
-			<li><a href="https://zoey-zongyu-li.netlify.app" >Zongyu (Zoey) Li</a></li>
+			<li><a href="https://www.zongyuli.net" >Zongyu (Zoey) Li</a></li>
 			<li>Hamid Roodabeh</li>
 			<li>Keshara Weerasinghe</li>
 			<li><a href="https://xugui-zhou.github.io/">Xugui Zhou</a></li>	
