--- a/students.html
+++ b/students.html
@@ -48,7 +48,7 @@
 			<li><a href="https://kch4fk.github.io" >Kay Hutchinson</li>
 			<li><a href="https://www.zongyuli.net" >Zongyu (Zoey) Li</a></li>
 			<li>Hamid Roodabeh</li>
-			<li>Keshara Weerasinghe</li>
+			<li><a href="https://keshara2032.github.io" >Keshara Weerasinghe</li>
 			<li><a href="https://xugui-zhou.github.io/">Xugui Zhou</a></li>	
 			</ul>
 			<br>
