--- a/students.html
+++ b/students.html
@@ -44,7 +44,7 @@
 		<tr>
 			<td></td>
 			<td><ul>
-			<li>Xueren Ge</li>
+			<li><a href="https://xueren-ge.github.io/" >Xueren Ge</li>
 			<li><a href="https://kch4fk.github.io" >Kay Hutchinson</li>
 			<li><a href="https://www.zongyuli.net" >Zongyu (Zoey) Li</a></li>
 			<li>Hamid Roodabeh</li>
