Add undergad researchers

--- a/students.html
+++ b/students.html
@@ -76,9 +76,9 @@
 			<li>Sneha Iyer</i>
 			<li>Saahith Janapati</li>
 			<li>Maxfield Kouzel</i>
-			<li>Joyce Park</i>
+			<li>Casey Ladd</i>
 			<li>Haotian Ren</li>
-			<li>Kathleen Yao</i>
+			<li>Chloe Smith</li>
 			<li>Shrisha Yapalparvi</li>
 			</ul>
 			</td>
@@ -112,6 +112,8 @@
 			<td></td>
 			<td>
 			<ul>
+			<li>Kathleen Yao</i>
+			<li>Joyce Park</i>
 			<li>Ian Reyes&ensp;=>&ensp;IBM&ensp;</li>
 			<li>Aishwarya Gavili</i>
 			<li>Sharon Lu</i>	
