--- a/students.html
+++ b/students.html
@@ -47,7 +47,7 @@
 			<li><a href="https://xueren-ge.github.io/" >Xueren Ge</li>
 			<li><a href="https://kch4fk.github.io" >Kay Hutchinson</li>
 			<li><a href="https://www.zongyuli.net" >Zongyu (Zoey) Li</a></li>
-			<li>Hamid Roodabeh</li>
+			<li><a href="https://hamidrezaro.github.io" >Hamid Roodabeh</a></li>
 			<li><a href="https://keshara2032.github.io" >Keshara Weerasinghe</li>
 			<li><a href="https://xugui-zhou.github.io/">Xugui Zhou</a></li>	
 			</ul>
