--- a/students.html
+++ b/students.html
@@ -72,12 +72,9 @@
 		<tr valign="top">
 		    <td></td>
 			<td><ul> 
-			<li>Shruti Bala</i>
-			<li>Sneha Iyer</i>
 			<li>Saahith Janapati</li>
 			<li>Maxfield Kouzel</i>
 			<li>Casey Ladd</i>
-			<li>Haotian Ren</li>
 			<li>Chloe Smith</li>
 			<li>Shrisha Yapalparvi</li>
 			</ul>
@@ -112,6 +109,9 @@
 			<td></td>
 			<td>
 			<ul>
+			<li>Sneha Iyer&ensp;=>&ensp;MSc @ Cornell&ensp;</i>
+			<li>Haotian Ren&ensp;=>&ensp;Amazon&ensp;</li>
+			<li>Shruti Bala</i>
 			<li>Kathleen Yao</i>
 			<li>Joyce Park</i>
 			<li>Ian Reyes&ensp;=>&ensp;IBM&ensp;</li>
