--- a/pub.html
+++ b/pub.html
@@ -25,6 +25,21 @@
 
 		    <tr valign="top">
 			<td>
+			<!--<a href="./papers/IJCARS_COMPASS_accepted.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
+			<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
+			   -->
+			</td>
+			<td>
+			<p align="left">
+			<b><font color=#000000>“Evaluating Task Generalization of TCNs for Surgical Gesture and Motion Recognition using Kinematic Data” </font></b></b><br>
+			K. Hutchinson, I. Reyes, Z. Li, <u>H. Alemzadeh</u><br>
+			To appear in the <i>IEEE Robotics and Automation Letters (RA-L)</i>, 2023. <b>(Impact Factor ~ 4.3)</b> <br>   	
+			</p>
+			</td>
+		    </tr>
+		    
+		    <tr valign="top">
+			<td>
 			<a href="./papers/IJCARS_COMPASS_accepted.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
 			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
 			   -->
