Add IROS and ECE 6501 videos

--- a/teaching/ece_6501/projects.html
+++ b/teaching/ece_6501/projects.html
@@ -42,6 +42,25 @@
     </p>
 	</td>
 	</tr>
+
+
+	<tr>
+	<td>
+    <p align="left">
+    <a id="2021_projects" style="font-size:16px"><b>Top Final Projects - Spring 2023</b></a>:
+    </p>
+	<table border="0" cellpadding="0" cellspacing="20" align="left">
+		<tbody>
+		<tr>
+		<td><iframe width="100%" height="auto%" src="https://www.youtube.com/embed/kJiCEIsaUSE" frameborder="0" allowfullscreen></iframe></td>
+		<td><iframe width="100%" height="auto%" src="https://www.youtube.com/embed/d-PDpr8dqkw" frameborder="0" allowfullscreen></iframe></td>
+		<td><iframe width="100%" height="auto%" src="https://www.youtube.com/embed/awj4-UzaUyg" frameborder="0" allowfullscreen></iframe></td>
+		</tr>
+		</tbody>
+	</table>
+	</td>
+    </tr>
+    
 	<tr>
 	<td>
     <p align="left">
@@ -56,8 +75,9 @@
 		</tr>
 		</tbody>
 	</table>
-    </tr>
 	</td>
+    </tr>
+
 	<tr>
 	<td>
     <p align="left">
