--- a/pub.html
+++ b/pub.html
@@ -23,6 +23,22 @@
 		<table border="0" cellpadding="5" cellspacing="0">
 		<tbody>
 
+
+		    <tr valign="top">
+			<td>
+			<!--<a href="./papers/IJCARS_COMPASS_accepted.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
+			<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
+			   -->
+			</td>
+			<td>
+			<p align="left">
+			<b><font color=#000000>“Robotic Scene Segmentation with Memory Network for Runtime Surgical Context Inference” </font></b></b><br>
+			Z. Li, I. Reyes, <u>H. Alemzadeh</u><br>
+			To appear in the <i>2023 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>, 2023. <b>(Acceptance Rate ~ 43.3%)</b> <br>   	
+			</p>
+			</td>
+		    </tr>
+		    
 		    <tr valign="top">
 			<td>
 			<!--<a href="./papers/IJCARS_COMPASS_accepted.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
