--- a/teaching/ece_6434/index.html
+++ b/teaching/ece_6434/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>ECE/CS 4434/6434 - Spring 2022</title>
+<title>ECE/CS 4434/6434 - Fall 2023</title>
 <link rel="stylesheet" type="text/css" href="style.css" />
 <link rel="icon" type="image/ico" href="images/favico.ico">
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
@@ -21,7 +21,7 @@
 	<p align="center" style="font-size:22px">
 	   <b>
 	   ECE/CS 4434/6434<br>
-	   Spring 2022 <br>
+	   Fall 2023 <br>
 	   </b>
 	</p>
 	<p align="center" style="font-size:20px" >
@@ -63,8 +63,8 @@
 	<strong><a href="https://piazza.com/virginia/spring2021/ececs44346434" target="_blank">Piazza</a></strong> (For questions, discussions, and polls)</p>	
 
 	<p align="justify"><br><strong>Pre-requisites: </strong>This course is intended for graduate and senior-level undergraduate students. A basic knowledge of probability and computer architecture is required. A working knowledge of programming is required for homework and final project.</br>
-	<strong>Undergraduate requirements:</strong> APMA 3100 or APMA 3110 - CS 3330 or ECE 4435 (co-req) - ECE 3430 (preferred)</p>
-	
+	<!--<strong>Undergraduate requirements:</strong> APMA 3100 or APMA 3110 - CS 3330 or ECE 4435 (co-req) - ECE 3430 (preferred)</p>
+	-->
 
 	<p><br>
 	<strong>Grading:</strong><br>
