--- a/teaching/ece_6434/schedule.html
+++ b/teaching/ece_6434/schedule.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>ECE/CS 4434/6434 - Spring 2022</title>
+<title>ECE/CS 4434/6434 - Fall 2023</title>
 <link rel="stylesheet" type="text/css" href="style.css" />
 <link rel="icon" type="image/ico" href="images/favico.ico">
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
@@ -20,13 +20,13 @@
 	<tr>
 	<td>
 	<p align="left" style="font-size:22px">
-	   <b>ECE/CS 4434/6434 - Spring 2022 Schedule<br></b>
+	   <b>ECE/CS 4434/6434 - Fall 2023 Schedule<br></b>
 	</p>
     <p align="left" style="font-size:14px">
     The following schedule lists the tentative activities for each week and throughout the semester. 
     This schedule is <b><u>subject to change</b></u>. You will be informed of any updates or changes here and on the Collab website and at the beginning of each class. <br></p>
     <p>
-    <iframe width = "100%" height = 950px src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQbNwpo_ljI43QWdhmGxr0sRWG6w4_ziRj6J1shoJiuyUuxEfBGmI6dL9BxS_yAoP2Bcq8uyZq8WAtS/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+    <iframe width = "100%" height = 950px src="https://docs.google.com/spreadsheets/d/e/2PACX-1vROZXNsLSHfqiJ0sXQQjw3otlKSraok5t5FWMTJrJxJscA_OSJIQMlGcwjKde1azbDqsbHXk_aqjSU6/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 	</p>
 	</td>
 	</tr>
