--- a/teaching/ece_6434/index.html
+++ b/teaching/ece_6434/index.html
@@ -59,8 +59,8 @@
 	<strong>Location: </strong>Rice Hall 340<br><br>
 	<strong>Instructor Office Hours: </strong>TBD or by appointment<br>
 	<strong>TA Office Hours: </strong>TBD<br>	
-	<strong><a href="https://collab.its.virginia.edu/portal/site/1b7818db-9f3c-4d78-ba05-d2847f0a107f" target="_blank">UVA Collab Site</a></strong> (For lecture notes, homework submission, grading)<br>
-	<strong><a href="https://piazza.com/virginia/spring2021/ececs44346434" target="_blank">Piazza</a></strong> (For questions, discussions, and polls)</p>	
+	<strong><a href="" target="_blank">UVA Canvas Site</a></strong> (For lecture notes, homework submission, grading)<br>
+	<strong><a href="" target="_blank">Piazza</a></strong> (For questions, discussions, and polls)</p>	
 
 	<p align="justify"><br><strong>Pre-requisites: </strong>This course is intended for graduate and senior-level undergraduate students. A basic knowledge of probability and computer architecture is required. A working knowledge of programming is required for homework and final project.</br>
 	<!--<strong>Undergraduate requirements:</strong> APMA 3100 or APMA 3110 - CS 3330 or ECE 4435 (co-req) - ECE 3430 (preferred)</p>
