--- a/teaching/ece_6434/index.html
+++ b/teaching/ece_6434/index.html
@@ -57,8 +57,14 @@
 	</p>
 	<p><strong>Time: </strong>Mon/Wed 2:00 - 3:15pm<br> 
 	<strong>Location: </strong>Rice Hall 340<br><br>
-	<strong>Instructor Office Hours: </strong>TBD or by appointment<br>
-	<strong>TA Office Hours: </strong>TBD<br>	
+
+	<strong>Instructor: </strong> Homa Alemzadeh, ha4d@virginia.edu<br>
+	Office: 259 Olsson Hall (Link Lab)<br>
+
+	<strong>Teaching Assistants: </strong> Xugui Zhou and Zongyu Li <br>
+		
+	<strong>Instructor Office Hours: </strong>Mon/Wed 3:30 - 4:00pm or by appointment<br>
+	<strong>TA Office Hours: </strong>Thr 3:30-4:30pm or by appointment<br>	
 	<strong><a href="" target="_blank">UVA Canvas Site</a></strong> (For lecture notes, homework submission, grading)<br>
 	<strong><a href="" target="_blank">Piazza</a></strong> (For questions, discussions, and polls)</p>	
 
