--- a/teaching/ece_6434/index.html
+++ b/teaching/ece_6434/index.html
@@ -58,10 +58,8 @@
 	<p><strong>Time: </strong>Mon/Wed 2:00 - 3:15pm<br> 
 	<strong>Location: </strong>Rice Hall 340<br><br>
 
-	<strong>Instructor: </strong> Homa Alemzadeh, ha4d@virginia.edu<br>
-	Office: 259 Olsson Hall (Link Lab)<br>
-
-	<strong>Teaching Assistants: </strong> Xugui Zhou and Zongyu Li <br>
+	<strong>Instructor: </strong> Homa Alemzadeh, ha4d@virginia.edu - Office: 259 Olsson Hall (Link Lab)<br>
+	<strong>Teaching Assistants: </strong> Xugui Zhou and Zongyu Li <br><br>
 		
 	<strong>Instructor Office Hours: </strong>Mon/Wed 3:30 - 4:00pm or by appointment<br>
 	<strong>TA Office Hours: </strong>Thr 3:30-4:30pm or by appointment<br>	
