--- a/teaching/ece_6434/index.html
+++ b/teaching/ece_6434/index.html
@@ -74,14 +74,14 @@
 	<strong>Grading:</strong><br>
 	<table border="0" cellpadding="0" cellspacing="8" class="smallfix">
 		<tbody>
-		<tr><td>Class Participation/Activity</td><td>5%</td></tr>
+		<tr><td>Class Participation/Activity</td><td></td><td>5%</td></tr>
 		<tr><td>Presentations:</tr>
-		<tr><td>-- Short presentations on real-world reliability/safety/security incidents/issues</td><td>UG: 5% - GRAD: 5%</td></tr>
-		<tr><td>-- Paper Presentations</td><td>UG: 0% - GRAD: 10%</td></tr>
-		<tr><td>Homework</td><td>UG: 25% - GRAD: 15%</td></tr>
-	    <tr><td>Final Project</td><td>30%</td></tr>
-		<tr><td>Midterm Exam</td><td>15%</td></tr>
-		<tr><td>Final Exam (Take Home)</td><td>20%</td></tr>
+		<tr><td>-- Short presentations on real-world reliability/safety/security incidents/issues</td><td><td></td>UG: 5% - GRAD: 5%</td></tr>
+		<tr><td>-- Paper Presentations</td><td></td><td>UG: 0% - GRAD: 10%</td></tr>
+		<tr><td>Homework</td><td></td><td>UG: 25% - GRAD: 15%</td></tr>
+	    <tr><td>Final Project</td><td></td><td>30%</td></tr>
+		<tr><td>Midterm Exam</td><td></td><td>15%</td></tr>
+		<tr><td>Final Exam (Take Home)</td><td></td><td>20%</td></tr>
 		</tbody>
 	</table>
     There will be a 10% penalty for late homework (per school day). You will also have a grace period of three days for the whole course to address any unexpected events such as sickness, traveling, other deadlines, interviews, etc. This means that you can always submit late assignments (except the presentation slides and the final exam), but if you don't use more than three late days, you will not be penalized in any way. The late penalties and the grace period will be accounted at the end of the semester. Also, your lowest grades for homework and class activity will be dropped. 
