--- a/teaching/ece_6434/index.html
+++ b/teaching/ece_6434/index.html
@@ -63,8 +63,8 @@
 		
 	<strong>Instructor Office Hours: </strong>Mon/Wed 3:30 - 4:00pm or by appointment<br>
 	<strong>TA Office Hours: </strong>Thr 3:30-4:30pm or by appointment<br>	
-	<strong><a href="" target="_blank">UVA Canvas Site</a></strong> (For lecture notes, homework submission, grading)<br>
-	<strong><a href="" target="_blank">Piazza</a></strong> (For questions, discussions, and polls)</p>	
+	<strong><a href="https://canvas.its.virginia.edu/courses/78122/pages/home" target="_blank">UVA Canvas Site</a></strong> (For lecture notes, homework submission, grading)<br>
+	<strong><a href="https://piazza.com/virginia/fall2023/ececs44346434/home" target="_blank">Piazza</a></strong> (For questions, discussions, and polls)</p>	
 
 	<p align="justify"><br><strong>Pre-requisites: </strong>This course is intended for graduate and senior-level undergraduate students. A basic knowledge of probability and computer architecture is required. A working knowledge of programming is required for homework and final project.</br>
 	<!--<strong>Undergraduate requirements:</strong> APMA 3100 or APMA 3110 - CS 3330 or ECE 4435 (co-req) - ECE 3430 (preferred)</p>
