--- a/teaching/ece_6434/index.html
+++ b/teaching/ece_6434/index.html
@@ -62,7 +62,7 @@
 	<strong>Teaching Assistants: </strong> Xugui Zhou and Zongyu Li <br><br>
 		
 	<strong>Instructor Office Hours: </strong>Mon/Wed 3:30 - 4:00pm or by appointment<br>
-	<strong>TA Office Hours: </strong>Thr 3:30-4:30pm or by appointment<br>	
+	<strong>TA Office Hours: </strong>Thr 3:30-4:30pm or by appointment<br><br>	
 	<strong><a href="https://canvas.its.virginia.edu/courses/78122/pages/home" target="_blank">UVA Canvas Site</a></strong> (For lecture notes, homework submission, grading)<br>
 	<strong><a href="https://piazza.com/virginia/fall2023/ececs44346434/home" target="_blank">Piazza</a></strong> (For questions, discussions, and polls)</p>	
 
