--- a/teaching/ece_6434/index.html
+++ b/teaching/ece_6434/index.html
@@ -51,7 +51,8 @@
 			<li>Reliable networked systems</li>
 			<li>Error detection techniques</li>
 			<li>Dependability evaluation techniques</li>
-			<li>Safety and Security</li>
+			<li>Safety and Security of Cyber-Physical Systems</li>
+			<li>Dependable and Secure Machine Learning Systems</li>
 		</ul>
 		<br>
 	</p>
