--- a/pub.html
+++ b/pub.html
@@ -49,7 +49,7 @@
 			<p align="left">
 			<b><font color=#000000>“Evaluating Task Generalization of TCNs for Surgical Gesture and Motion Recognition using Kinematic Data” </font></b></b><br>
 			K. Hutchinson, I. Reyes, Z. Li, <u>H. Alemzadeh</u><br>
-			To appear in the <i>IEEE Robotics and Automation Letters (RA-L)</i>, 2023. <b>(Impact Factor ~ 4.3)</b> <br>   	
+			In the <i>IEEE Robotics and Automation Letters (RA-L)</i>, 2023. <b>(Impact Factor ~ 4.3)</b> <br>   	
 			</p>
 			</td>
 		    </tr>
@@ -79,7 +79,7 @@
 			<p align="left">
 			<b><font color=#000000>“emsReACT: A Real-Time Interactive Cognitive Assistant for Cardiac Arrest Training in Emergency Medical Services,” </font></b></b><br>
 			M A. Rahman, L. Jia, E. Mirza, S. M. Preum. <u>H. Alemzadeh</u>, R. D. Williams, J. Stankovic, <br>
-			To appear in the <i>19th Annual Int. Conf. on Distributed Computing in Smart Systems and the Internet of Things (DCOSS-IoT)</i>, 2023. <br>  	
+			In the <i>19th Annual Int. Conf. on Distributed Computing in Smart Systems and the Internet of Things (DCOSS-IoT)</i>, 2023. <br>  	
 			</p>
 			</td>
 		    </tr>
@@ -95,7 +95,7 @@
 			<p align="left">
 			<b><font color=#000000>“Poster Abstract: SenseEMS - Towards A Hand Activity Recognition and Monitoring System for Emergency Medical Services,” [Poster] </font></b><br>
 			M. A. Rahman, K. Weerasinghe, L. Wijayasingha, <u>H. Alemzadeh</u>, R. D. Williams, J. Stankovic, <br>
-			To appear in the <i>22nd annual ACM/IEEE International Conference on Information Processing in Sensor Networks (IPSN)</i>, 2023. <br>  	
+			In the <i>22nd annual ACM/IEEE International Conference on Information Processing in Sensor Networks (IPSN)</i>, 2023. <br>  	
 			</p>
 			</td>
 		    </tr>
@@ -111,7 +111,7 @@
 			<p align="left">
 			<b><font color=#000000>“EMS-BERT: A Pre-Trained Language Representation Model for the Emergency Medical Services (EMS) Domain” </font></b></b><br>
 			M. A. Rahman, S. M. Preum, R. D. Williams, <u>H. Alemzadeh</u>, J. Stankovic<br>
-			To appear in the <i>IEEE/ACM Conf. on Connected Health: Applications, Systems and Engineering Technologies (CHASE)</i>, 2023. <b> (Acceptance rate ~ 35%) </b> <br>   	
+			In the <i>IEEE/ACM Conf. on Connected Health: Applications, Systems and Engineering Technologies (CHASE)</i>, 2023. <b> (Acceptance rate ~ 35%) </b> <br>   	
 			</p>
 			</td>
 		    </tr>
@@ -127,7 +127,7 @@
 			<p align="left">
 			<b><font color=#000000>“Short: Basal-Adjust: Trend Prediction Alerts and Adjusted Basal Rates for Hyperglycemia Prevention” </font></b></b><br>
 			C. Smith, M. Kouzel, X. Zhou, <u>H. Alemzadeh</u><br>
-			To appear in the <i>IEEE/ACM Conf. on Connected Health: Applications, Systems and Engineering Technologies (CHASE)</i>, 2023. <b> (Acceptance rate ~ 35%) </b> <br>   	
+			In the <i>IEEE/ACM Conf. on Connected Health: Applications, Systems and Engineering Technologies (CHASE)</i>, 2023. <b> (Acceptance rate ~ 35%) </b> <br>   	
 			</p>
 			</td>
 		    </tr>
@@ -143,7 +143,7 @@
 			<p align="left">
 			<b><font color=#000000>“Towards Surgical Context Inference and Translation to Gestures” </font></b></b><br>
 			K. Hutchinson, Z. Li, I. Reyes, <u>H. Alemzadeh</u><br>
-			To appear in the <i>IEEE International Conference on Robotics and Automation (ICRA)</i>, 2023. <b> (Acceptance rate ~ 43.1%) </b> <br>   	
+			In the <i>IEEE International Conference on Robotics and Automation (ICRA)</i>, 2023. <b> (Acceptance rate ~ 43.1%) </b> <br>   	
 			</p>
 			</td>
 		    </tr>
