update index and students

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 		<h1>Recent News</h1>
 	</div>
 	<div id="rightColumn2">
-		Co-organizing <a href="https://ivds.dependability.org"> The Second IFIP workshop on Intelligent Vehicle Dependability and Security (IVDS)</a>.
+		Co-organizing the IFIP WG 10.4 Workshop on Trustworthy ML-Enabled CPS</a>.
 		<br><br>
 		
-		New papers on <a href="https://onlinelibrary.wiley.com/doi/epdf/10.1002/rcs.2375">Analysis of Executional and Procedural Errors</a> and 
-		<a href="https://homa-alem.github.io/papers/ICRA_2022.pdf"> Real-time Safety Monitoring</a> in Robot-Assisted Surgery. 
+		New papers on <a href="https://homa-alem.github.io/papers/IJCARS_COMPASS_accepted.pdf">Surgical Procedure Modeling</a> and 
+		<a href="https://arxiv.org/pdf/2308.12789.pdf"> Robotic Scene Segmentation for Runtime Surgical Context Inference </a>. 
 		<br><br>
 		
 		A <b>postdoctoral research position</b> available in the area of AI Cognitive Assistants for Emergency Response. 
