--- a/students.html
+++ b/students.html
@@ -44,11 +44,11 @@
 		<tr>
 			<td></td>
 			<td><ul>
-			<li><a href="https://xueren-ge.github.io/" >Xueren Ge</li>
-			<li><a href="https://kch4fk.github.io" >Kay Hutchinson</li>
+			<li><a href="https://xueren-ge.github.io/" >Xueren Ge</a></li>
+			<li><a href="https://kch4fk.github.io" >Kay Hutchinson</a></li>
 			<li><a href="https://www.zongyuli.net" >Zongyu (Zoey) Li</a></li>
 			<li><a href="https://hamidrezaro.github.io" >Hamid Roodabeh</a></li>
-			<li><a href="https://keshara2032.github.io" >Keshara Weerasinghe</li>
+			<li><a href="https://keshara2032.github.io" >Keshara Weerasinghe</a></li>
 			<li><a href="https://xugui-zhou.github.io/">Xugui Zhou</a></li>	
 			</ul>
 			<br>
@@ -56,15 +56,16 @@
 		</tr>
 	
 		<tr>
-		<!--	<td colspan=2><b><font size="3" color=#000000>M.S. Students</font></td>
+		<td colspan=2><b><font size="3" color=#000000>Research Programmers</font></td>
 		</tr>    
 		<tr valign="top">
 			<td></td>
 			<td><ul>
+			<li><a href="https://www.linkedin.com/in/sion-kim-696ba91a4/">Sion Kim</a></li>
 			</ul>
 			<br>
 			</td>
-		</tr> -->
+		</tr> 
 			
 		<tr valign="top">
 			<td colspan=2><b><font size="3" color=#000000>Undergraduate Researchers</font></td>
@@ -73,9 +74,7 @@
 		    <td></td>
 			<td><ul> 
 			<li>Saahith Janapati</li>
-			<li>Maxfield Kouzel</i>
-			<li>Casey Ladd</i>
-			<li>Chloe Smith</li>
+			<li>Shaunak Tandon Sinha</li>
 			<li>Shrisha Yapalparvi</li>
 			</ul>
 			</td>
@@ -109,6 +108,9 @@
 			<td></td>
 			<td>
 			<ul>
+			<li>Chloe Smith&ensp;=>&ensp;Elder Research&ensp;</li>
+			<li>Maxfield Kouzel</i>
+			<li>Casey Ladd</i>
 			<li>Sneha Iyer&ensp;=>&ensp;MSc @ Cornell&ensp;</i>
 			<li>Haotian Ren&ensp;=>&ensp;Amazon&ensp;</li>
 			<li>Shruti Bala</i>
